# nps

./: .gitignore  README.md  pyproject.toml
data/exports/: manifest.json  persons_manifest.json
data/exports/annual_extracts/: annual_extract_990_2011_2018_full_manifest.json
data/exports/download_chunks/: manifest.json
docs/: case-study-splc.md  risk-signals.md
docs/samples/: README.md  nonprofit_fraud_cases_manifest.json  nonprofit_fraud_cases_sample.csv  nonprofit_fraud_cases_sample.json
scripts/: build_nonprofit_fraud_case_sample.py  build_splc_network_explorer.py  combine_gz_csv.py  stack_annual_extracts.py
src/i990/: __init__.py  cli.py  config.py  db.py  export.py  http.py
src/i990/parse/: xml_header.py
src/i990/risk/: __init__.py  engine.py  signals.py
src/i990/sources/: bmf.py  irs_xml.py
tests/: test_export.py  test_http.py  test_parsing_helpers.py  test_risk_engine.py
